--- a/petle/Makefile
+++ b/petle/Makefile
@@ -6,4 +6,4 @@ all: zad1 zad2 zad3 zad4 zad5 zad6 zad7
 
 
 clean:
-		rm -f *.o *~ zad1 zad2 zad3 zad4 zad5 zad6 zad7 zad8 
+		rm -f *.o *~ zad1 zad2 zad3 zad4 zad5 zad6 zad7 
